--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,8 @@ section {display:flex;}
 .btn:hover {border:none;}
 .btn-default {color: white;background-color: #faa541;}
 .btn-primary {color: white;background-color: #364147;}
-.form-control {display:block;padding: 6px 6px 12px 12px;border: 1px solid #a0a0a0;
+.form-control {display:block;padding: 6px 12px;
+border: 1px solid #a0a0a0;
 color:#8598a2;line-height: 1.4;}
 
 .text-light {font-size: 30px;color:#a0a0a0;}
