--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ ul { padding: 0; margin: 0; list-style: none; }
 nav { padding: 10px 0; }
 h1, h2, h3, h4, h5, h6 { margin: 0; }
 /***************************************/
-.container{ margin: 0 0 auto auto; max-width: 1170px;}
+.container{ margin: 0 auto; max-width: 1170px;}
 section {display:flex;}
 .flex{ display: flex;}
 .flex-column{ flex-direction: column;}
@@ -15,7 +15,7 @@ section {display:flex;}
 .align-center {align-items: center;}
 .center {justify-content: center;}
 .space-between {justify-content:space-between;}
-.btn {padding: 6px 6px 12px 12px; line-height: 1.4;border-radius:3px;}
+.btn {padding: 6px 12px; line-height: 1.4;border-radius:3px;}
 .btn:hover {border:none;}
 .btn-default {color: white;background-color: #faa541;}
 .btn-primary {color: white;background-color: #364147;}
