--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,14 @@ line-height: 1;text-align:center;}
     color: #ffffff;
 }
 
+.full-banner-sidebar h4 {
+    font-size:40px;
+    font-weight:700;
+    color:#637f94;
+    font-style: italic;
+    line-height: 1;
+}
+
 .full-banner-sidebar h4:after {
     content: "";
     width:100px;
