--- a/css/main.css
+++ b/css/main.css
@@ -197,8 +197,7 @@ footer:after {
 
 .lists {
     flex: 0 0 75%;
-    margin:0 15px;
-    padding: 40px 0;
+    padding: 40px 15px;
 }
 
 .link-header {
